test/ill-formed/unsupported/with_stmt.py
with open("test.txt") as f:
    pass
